# rx185-eap-method-cards-v0

./: LICENSE  README.md  manifest.json
cards/: arc_agi3_protocol_cards.jsonl  eap_core.md  first_principles_cards.jsonl  forbidden_actions.json
legion-control-plane/: .gitignore  Cargo.toml
legion-control-plane/crates/legion-bus/: Cargo.toml
legion-control-plane/crates/legion-bus/src/: commands.rs  db.rs  event_log.rs  heartbeat.rs  leases.rs  lib.rs  registry.rs
legion-control-plane/crates/legion-bus/tests/: bus_invariants.rs
legion-control-plane/crates/legion-telegram/: Cargo.toml
legion-control-plane/crates/legion-telegram/src/: api.rs  error.rs  lib.rs  offset.rs  outbox.rs  poller.rs  types.rs
legion-control-plane/crates/legion-telegram/src/commands/: agents.rs  mod.rs  status.rs  tasks.rs
legion-control-plane/crates/legion-telegram/tests/: chaos.rs
legion-control-plane/crates/legion-telegram/tests/common/: mod.rs
legion-control-plane/crates/legion-types/: Cargo.toml
legion-control-plane/crates/legion-types/src/: agent.rs  command.rs  event.rs  heartbeat.rs  lease.rs  lib.rs  task.rs
legion-control-plane/sql/migrations/: 001_init.sql  002_telegram_dispatch_state.sql
