[workspace]
resolver = "2"
members = [
    "crates/legion-types",
    "crates/legion-bus",
    "crates/legion-telegram",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RyanX Legion Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

# IDs & time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async trait support
async-trait = "0.1"

# HTTP client (real Telegram API)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
