[package]
name = "legion-bus"
version.workspace = true
edition.workspace = true

[dependencies]
legion-types = { path = "../legion-types" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = "3"
